tests/snapshots/r#mod__calendar_object__0_data@0.snap
---
source: tests/mod.rs
expression: recurrence.get_inner()
---
Event(
    IcalEvent {
        uid: "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
        dtstamp: IcalDTSTAMPProperty(
            CalDateTime(
                2025-12-28T11:13:27Olson(
                    UTC,
                ),
            ),
            ContentLineParams(
                [],
            ),
        ),
        dtstart: IcalDTSTARTProperty(
            DateTime(
                CalDateTime(
                    2025-12-30T09:00:00Olson(
                        UTC,
                    ),
                ),
            ),
            ContentLineParams(
                [],
            ),
        ),
        dtend: Some(
            IcalDTENDProperty(
                DateTime(
                    CalDateTime(
                        2025-12-30T12:25:00Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
        ),
        duration: None,
        rdates: [],
        rrules: [],
        exdates: [],
        exrules: [],
        recurid: Some(
            IcalRECURIDProperty(
                DateTime(
                    CalDateTime(
                        2025-12-30T09:00:00Olson(
                            UTC,
                        ),
                    ),
                ),
                This,
            ),
        ),
        summary: Some(
            IcalSUMMARYProperty(
                "Recurring at 10am\\, last a 11am",
                ContentLineParams(
                    [],
                ),
            ),
        ),
        properties: [
            ContentLine {
                name: "UID",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
                ),
            },
            ContentLine {
                name: "DTSTAMP",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "20251228T111327Z",
                ),
            },
            ContentLine {
                name: "DTSTART",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "20251230T090000Z",
                ),
            },
            ContentLine {
                name: "SEQUENCE",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "3",
                ),
            },
            ContentLine {
                name: "SUMMARY",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "Recurring at 10am\\, last a 11am",
                ),
            },
            ContentLine {
                name: "TRANSP",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "OPAQUE",
                ),
            },
            ContentLine {
                name: "CLASS",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "PUBLIC",
                ),
            },
            ContentLine {
                name: "CREATED",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "20251228T114744Z",
                ),
            },
            ContentLine {
                name: "LAST-MODIFIED",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "20251228T114806Z",
                ),
            },
            ContentLine {
                name: "RECURRENCE-ID",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "20251230T090000Z",
                ),
            },
            ContentLine {
                name: "DURATION",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "PT3H25M",
                ),
            },
        ],
        alarms: [],
    },
    [
        IcalEvent {
            uid: "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-12-28T11:13:27Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                DateTime(
                    CalDateTime(
                        2025-12-31T09:00:00Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtend: Some(
                IcalDTENDProperty(
                    DateTime(
                        CalDateTime(
                            2025-12-31T12:25:00Olson(
                                UTC,
                            ),
                        ),
                    ),
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: Some(
                IcalRECURIDProperty(
                    DateTime(
                        CalDateTime(
                            2025-12-31T09:00:00Olson(
                                UTC,
                            ),
                        ),
                    ),
                    This,
                ),
            ),
            summary: Some(
                IcalSUMMARYProperty(
                    "Recurring at 10am\\, last a 11am",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T111327Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251231T090000Z",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "3",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "Recurring at 10am\\, last a 11am",
                    ),
                },
                ContentLine {
                    name: "TRANSP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "OPAQUE",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PUBLIC",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T114744Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T114806Z",
                    ),
                },
                ContentLine {
                    name: "RECURRENCE-ID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251231T090000Z",
                    ),
                },
                ContentLine {
                    name: "DURATION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PT3H25M",
                    ),
                },
            ],
            alarms: [],
        },
        IcalEvent {
            uid: "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-12-28T11:13:27Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                DateTime(
                    CalDateTime(
                        2026-01-01T09:00:00Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtend: Some(
                IcalDTENDProperty(
                    DateTime(
                        CalDateTime(
                            2026-01-01T12:25:00Olson(
                                UTC,
                            ),
                        ),
                    ),
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: Some(
                IcalRECURIDProperty(
                    DateTime(
                        CalDateTime(
                            2026-01-01T09:00:00Olson(
                                UTC,
                            ),
                        ),
                    ),
                    This,
                ),
            ),
            summary: Some(
                IcalSUMMARYProperty(
                    "Recurring at 10am\\, last a 11am",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T111327Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20260101T090000Z",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "3",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "Recurring at 10am\\, last a 11am",
                    ),
                },
                ContentLine {
                    name: "TRANSP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "OPAQUE",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PUBLIC",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T114744Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T114806Z",
                    ),
                },
                ContentLine {
                    name: "RECURRENCE-ID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20260101T090000Z",
                    ),
                },
                ContentLine {
                    name: "DURATION",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PT3H25M",
                    ),
                },
            ],
            alarms: [],
        },
        IcalEvent {
            uid: "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-12-28T11:13:27Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                DateTime(
                    CalDateTime(
                        2026-01-02T10:00:00Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtend: Some(
                IcalDTENDProperty(
                    DateTime(
                        CalDateTime(
                            2026-01-02T12:25:00Olson(
                                UTC,
                            ),
                        ),
                    ),
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: Some(
                IcalRECURIDProperty(
                    DateTime(
                        CalDateTime(
                            2026-01-02T09:00:00Olson(
                                UTC,
                            ),
                        ),
                    ),
                    This,
                ),
            ),
            summary: Some(
                IcalSUMMARYProperty(
                    "Recurring at 10am\\, last a 11am",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "459aa1c8ba359d55e03584cbc3ad1e05b2113b79",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T111327Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20260102T100000Z",
                    ),
                },
                ContentLine {
                    name: "DTEND",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20260102T122500Z",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "4",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "Recurring at 10am\\, last a 11am",
                    ),
                },
                ContentLine {
                    name: "TRANSP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "OPAQUE",
                    ),
                },
                ContentLine {
                    name: "CLASS",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "PUBLIC",
                    ),
                },
                ContentLine {
                    name: "CREATED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T114744Z",
                    ),
                },
                ContentLine {
                    name: "LAST-MODIFIED",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T114818Z",
                    ),
                },
                ContentLine {
                    name: "RECURRENCE-ID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20260102T090000Z",
                    ),
                },
            ],
            alarms: [],
        },
    ],
)
