tests/snapshots/r#mod__calendar_object__0_data@1.snap
---
source: tests/mod.rs
expression: recurrence.get_inner()
---
Event(
    IcalEvent {
        uid: "wholeday",
        dtstamp: IcalDTSTAMPProperty(
            CalDateTime(
                2025-12-28T11:13:27Olson(
                    UTC,
                ),
            ),
            ContentLineParams(
                [],
            ),
        ),
        dtstart: IcalDTSTARTProperty(
            Date(
                CalDate(
                    2025-12-30,
                    Olson(
                        UTC,
                    ),
                ),
            ),
            ContentLineParams(
                [],
            ),
        ),
        dtend: None,
        duration: None,
        rdates: [],
        rrules: [],
        exdates: [],
        exrules: [],
        recurid: Some(
            IcalRECURIDProperty(
                Date(
                    CalDate(
                        2025-12-30,
                        Olson(
                            UTC,
                        ),
                    ),
                ),
                This,
            ),
        ),
        summary: Some(
            IcalSUMMARYProperty(
                "wholeday event",
                ContentLineParams(
                    [],
                ),
            ),
        ),
        properties: [
            ContentLine {
                name: "UID",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "wholeday",
                ),
            },
            ContentLine {
                name: "DTSTAMP",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "20251228T111327Z",
                ),
            },
            ContentLine {
                name: "DTSTART",
                params: ContentLineParams(
                    [
                        (
                            "VALUE",
                            [
                                "DATE",
                            ],
                        ),
                    ],
                ),
                value: Some(
                    "20251230",
                ),
            },
            ContentLine {
                name: "SEQUENCE",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "3",
                ),
            },
            ContentLine {
                name: "SUMMARY",
                params: ContentLineParams(
                    [],
                ),
                value: Some(
                    "wholeday event",
                ),
            },
            ContentLine {
                name: "RECURRENCE-ID",
                params: ContentLineParams(
                    [
                        (
                            "VALUE",
                            [
                                "DATE",
                            ],
                        ),
                    ],
                ),
                value: Some(
                    "20251230",
                ),
            },
        ],
        alarms: [],
    },
    [
        IcalEvent {
            uid: "wholeday",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-12-28T11:13:27Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                Date(
                    CalDate(
                        2025-12-31,
                        Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtend: None,
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: Some(
                IcalRECURIDProperty(
                    Date(
                        CalDate(
                            2025-12-31,
                            Olson(
                                UTC,
                            ),
                        ),
                    ),
                    This,
                ),
            ),
            summary: Some(
                IcalSUMMARYProperty(
                    "wholeday event",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "wholeday",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T111327Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20251231",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "3",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "wholeday event",
                    ),
                },
                ContentLine {
                    name: "RECURRENCE-ID",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20251231",
                    ),
                },
            ],
            alarms: [],
        },
        IcalEvent {
            uid: "wholeday",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-12-28T11:13:27Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                Date(
                    CalDate(
                        2026-01-01,
                        Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtend: None,
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: Some(
                IcalRECURIDProperty(
                    Date(
                        CalDate(
                            2026-01-01,
                            Olson(
                                UTC,
                            ),
                        ),
                    ),
                    This,
                ),
            ),
            summary: Some(
                IcalSUMMARYProperty(
                    "wholeday event",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "wholeday",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T111327Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20260101",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "3",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "wholeday event",
                    ),
                },
                ContentLine {
                    name: "RECURRENCE-ID",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20260101",
                    ),
                },
            ],
            alarms: [],
        },
        IcalEvent {
            uid: "wholeday",
            dtstamp: IcalDTSTAMPProperty(
                CalDateTime(
                    2025-12-28T11:13:27Olson(
                        UTC,
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtstart: IcalDTSTARTProperty(
                Date(
                    CalDate(
                        2026-01-02,
                        Olson(
                            UTC,
                        ),
                    ),
                ),
                ContentLineParams(
                    [],
                ),
            ),
            dtend: None,
            duration: None,
            rdates: [],
            rrules: [],
            exdates: [],
            exrules: [],
            recurid: Some(
                IcalRECURIDProperty(
                    Date(
                        CalDate(
                            2026-01-02,
                            Olson(
                                UTC,
                            ),
                        ),
                    ),
                    This,
                ),
            ),
            summary: Some(
                IcalSUMMARYProperty(
                    "wholeday event",
                    ContentLineParams(
                        [],
                    ),
                ),
            ),
            properties: [
                ContentLine {
                    name: "UID",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "wholeday",
                    ),
                },
                ContentLine {
                    name: "DTSTAMP",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "20251228T111327Z",
                    ),
                },
                ContentLine {
                    name: "DTSTART",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20260102",
                    ),
                },
                ContentLine {
                    name: "SEQUENCE",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "3",
                    ),
                },
                ContentLine {
                    name: "SUMMARY",
                    params: ContentLineParams(
                        [],
                    ),
                    value: Some(
                        "wholeday event",
                    ),
                },
                ContentLine {
                    name: "RECURRENCE-ID",
                    params: ContentLineParams(
                        [
                            (
                                "VALUE",
                                [
                                    "DATE",
                                ],
                            ),
                        ],
                    ),
                    value: Some(
                        "20260102",
                    ),
                },
            ],
            alarms: [],
        },
    ],
)
