tests/snapshots/r#mod__calendar_object__0_ics@0.snap
---
source: tests/mod.rs
expression: recurrence.generate()
---
BEGIN:VCALENDAR
VERSION:2.0
CALSCALE:GREGORIAN
PRODID:RustiCal
X-WR-CALNAME:Test
X-WR-CALDESC:Just some tests
X-WR-TIMEZONE:Europe/Berlin
BEGIN:VEVENT
UID:459aa1c8ba359d55e03584cbc3ad1e05b2113b79
DTSTAMP:20251228T111327Z
DTSTART:20251230T090000Z
SEQUENCE:3
SUMMARY:Recurring at 10am\, last a 11am
TRANSP:OPAQUE
CLASS:PUBLIC
CREATED:20251228T114744Z
LAST-MODIFIED:20251228T114806Z
RECURRENCE-ID:20251230T090000Z
DURATION:PT3H25M
END:VEVENT
BEGIN:VEVENT
UID:459aa1c8ba359d55e03584cbc3ad1e05b2113b79
DTSTAMP:20251228T111327Z
DTSTART:20251231T090000Z
SEQUENCE:3
SUMMARY:Recurring at 10am\, last a 11am
TRANSP:OPAQUE
CLASS:PUBLIC
CREATED:20251228T114744Z
LAST-MODIFIED:20251228T114806Z
RECURRENCE-ID:20251231T090000Z
DURATION:PT3H25M
END:VEVENT
BEGIN:VEVENT
UID:459aa1c8ba359d55e03584cbc3ad1e05b2113b79
DTSTAMP:20251228T111327Z
DTSTART:20260101T090000Z
SEQUENCE:3
SUMMARY:Recurring at 10am\, last a 11am
TRANSP:OPAQUE
CLASS:PUBLIC
CREATED:20251228T114744Z
LAST-MODIFIED:20251228T114806Z
RECURRENCE-ID:20260101T090000Z
DURATION:PT3H25M
END:VEVENT
BEGIN:VEVENT
UID:459aa1c8ba359d55e03584cbc3ad1e05b2113b79
DTSTAMP:20251228T111327Z
DTSTART:20260102T100000Z
DTEND:20260102T122500Z
SEQUENCE:4
SUMMARY:Recurring at 10am\, last a 11am
TRANSP:OPAQUE
CLASS:PUBLIC
CREATED:20251228T114744Z
LAST-MODIFIED:20251228T114818Z
RECURRENCE-ID:20260102T090000Z
END:VEVENT
END:VCALENDAR
