tests/snapshots/r#mod__calendar_object__0_ics@1.snap
---
source: tests/mod.rs
expression: recurrence.generate()
---
BEGIN:VCALENDAR
VERSION:2.0
CALSCALE:GREGORIAN
PRODID:RustiCal
BEGIN:VEVENT
UID:wholeday
DTSTAMP:20251228T111327Z
DTSTART;VALUE=DATE:20251230
SEQUENCE:3
SUMMARY:wholeday event
RECURRENCE-ID;VALUE=DATE:20251230
END:VEVENT
BEGIN:VEVENT
UID:wholeday
DTSTAMP:20251228T111327Z
DTSTART;VALUE=DATE:20251231
SEQUENCE:3
SUMMARY:wholeday event
RECURRENCE-ID;VALUE=DATE:20251231
END:VEVENT
BEGIN:VEVENT
UID:wholeday
DTSTAMP:20251228T111327Z
DTSTART;VALUE=DATE:20260101
SEQUENCE:3
SUMMARY:wholeday event
RECURRENCE-ID;VALUE=DATE:20260101
END:VEVENT
BEGIN:VEVENT
UID:wholeday
DTSTAMP:20251228T111327Z
DTSTART;VALUE=DATE:20260102
SEQUENCE:3
SUMMARY:wholeday event
RECURRENCE-ID;VALUE=DATE:20260102
END:VEVENT
END:VCALENDAR
